--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -97,29 +97,112 @@
     }
   },
   "about": {
-    "title": "हमारे बारे में",
-    "journey": {
-      "title": "हमारी यात्रा",
-      "description": "2020 में स्थापित, यूनीगोल्ड फाइनेंस विश्वास और विश्वसनीयता के साथ ग्राहकों की सेवा कर रहा है",
-      "milestones": {
-        "2020": "गोल्ड लोन को क्रांतिकारी बनाने के विजन के साथ स्थापित",
-        "2021": "50+ शाखाओं तक विस्तार",
-        "2022": "डिजिटल गोल्ड लोन प्लेटफॉर्म लॉन्च",
-        "2023": "₹1000 करोड़ का ऋण पोर्टफोलियो हासिल किया"
+    "title": "2023 से विश्वसनीय सोना ऋण भागीदार",
+  "overview": "2023 में स्थापित, हम 20 शाखाओं और ₹230+ करोड़ के एसेट्स अंडर मैनेजमेंट (AUM) के साथ ओडिशा के सबसे तेजी से बढ़ते सोना ऋण प्रदाता बन गए हैं। हमारे ग्राहक-प्रथम दृष्टिकोण और पारदर्शी प्रक्रियाओं ने 15,000 से अधिक परिवारों को उनकी सोने की संपत्ति का मूल्य उजागर करने में मदद की है।",
+
+  "growth": {
+    "title": "हमारी उल्लेखनीय वृद्धि",
+    "founding": {
+      "title": "मामूली शुरुआत",
+      "description": "अप्रैल 2023 में भुवनेश्वर में एक शाखा के साथ शुरुआत, निष्पक्ष सोने का मूल्यांकन और त्वरित भुगतान पर ध्यान केंद्रित किया।"
+    },
+    "expansion": {
+      "title": "ओडिशा विस्तार",
+      "description": "मात्र 18 महीनों में, हमने 20 रणनीतिक स्थानों पर मजबूत उपस्थिति स्थापित की:",
+      "branches": {
+        "1": "भुवनेश्वर (फ्लैगशिप शाखा)",
+        "2": "कटक सिटी सेंटर",
+        "3": "पुरी तीर्थ केंद्र",
+        "4": "संबलपुर वाणिज्यिक केंद्र",
+        "5": "राउरकेला औद्योगिक शाखा"
       }
     },
-    "leadership": {
-      "title": "नेतृत्व",
-      "description": "हमारी अनुभवी नेतृत्व टीम वित्तीय सेवाओं में दशकों का विशेषज्ञता लाती है"
-    },
-    "values": {
-      "title": "हमारे मूल्य",
-      "integrity": "सभी लेनदेन में ईमानदारी",
-      "transparency": "पूर्ण पारदर्शिता",
-      "customer": "ग्राहक-प्रथम दृष्टिकोण",
-      "innovation": "निरंतर नवाचार"
+    "aum": {
+      "title": "वित्तीय मील का पत्थर",
+      "description": "0.79% प्रति माह से शुरू होने वाली प्रतिस्पर्धी ब्याज दरों और विश्वास-निर्माण उपायों के माध्यम से ₹230 करोड़ AUM हासिल किया।",
+      "subtext": "98% नवीनीकरण दर के साथ मासिक 500+ ग्राहकों को सेवा प्रदान करना"
     }
   },
+  "title": "हमारी सोने की ऋण सेवाओं के बारे में",
+  "overview": "2010 से एक विश्वसनीय सोना ऋण प्रदाता के रूप में, हम पूरी पारदर्शिता के साथ सबसे प्रतिस्पर्धी ब्याज दरें प्रदान करते हैं। हमारा मिशन आपकी कीमती सोने को सुरक्षित रखते हुए वित्तीय स्वतंत्रता प्रदान करना है।",
+  
+  "journey": {
+    "title": "हमारी सोने की यात्रा",
+    "description": "एक शाखा से शुरू होकर क्षेत्र के सबसे विश्वसनीय सोना ऋण प्रदाताओं में से एक बनने तक, हमारी वृद्धि ग्राहक संतुष्टि के प्रति हमारी प्रतिबद्धता को दर्शाती है।",
+    "milestones": {
+      "2010": "सोने के ऋण में क्रांति लाने के विजन के साथ स्थापना",
+      "2014": "सोने के ऋण वितरण में ₹100 करोड़ पार",
+      "2018": "मोबाइल सोना ऋण सेवाएं शुरू कीं",
+      "2023": "50,000 से अधिक संतुष्ट ग्राहकों को सेवा प्रदान की"
+    }
+  },
+  
+  "whyUs": {
+    "title": "हमारे सोने के ऋण क्यों चुनें?",
+    "points": {
+      "rate": {
+        "title": "सबसे कम ब्याज दरें",
+        "description": "केवल 0.75% प्रति माह से शुरू होने वाली दरों का आनंद लें, बिना किसी छिपे हुए शुल्क के।"
+      },
+      "process": {
+        "title": "त्वरित प्रसंस्करण",
+        "description": "न्यूनतम दस्तावेज़ीकरण के साथ 30 मिनट के भीतर ऋण स्वीकृत करवाएं।"
+      },
+      "security": {
+        "title": "100% सुरक्षित",
+        "description": "आपका सोना आरबीआई-अनुमोदित वॉल्ट में बीमा कवरेज के साथ संग्रहीत किया जाता है।"
+      }
+    }
+  },
+  
+  "values": {
+    "title": "हमारे सुनहरे मूल्य",
+    "list": {
+      "integrity": {
+        "icon": "integrity",
+        "title": "ईमानदारी",
+        "description": "प्रत्येक लेन-देन ईमानदारी और नैतिक प्रथाओं के साथ किया जाता है।"
+      },
+      "transparency": {
+        "icon": "transparency",
+        "title": "पारदर्शिता",
+        "description": "कोई छिपे हुए शुल्क या छोटे प्रिंट नहीं - हम स्पष्ट संचार में विश्वास करते हैं।"
+      },
+      "customer": {
+        "icon": "customer",
+        "title": "ग्राहक प्रथम",
+        "description": "लचीले पुनर्भुगतान विकल्पों के साथ आपकी आवश्यकताएं हमारी प्राथमिकता हैं।"
+      },
+      "innovation": {
+        "icon": "innovation",
+        "title": "नवाचार",
+        "description": "प्रौद्योगिकी के माध्यम से हमारी सेवाओं में निरंतर सुधार।"
+      }
+    }
+  },
+  
+  "leadership": {
+    "title": "हमारी स्वर्ण टीम",
+    "description": "बैंकिंग और वित्त में 50 से अधिक वर्षों के संयुक्त अनुभव के साथ, हमारी नेतृत्व टीम आपको बेहतर सेवा प्रदान करने के लिए विशेषज्ञता और दृष्टि लाती है।",
+    "team": {
+      "ceo": {
+        "name": "राजेश शर्मा",
+        "position": "संस्थापक और सीईओ",
+        "bio": "वित्तीय सेवाओं में 25+ वर्षों के अनुभव के साथ पूर्व बैंकर।"
+      },
+      "operations": {
+        "name": "प्रिया पटेल",
+        "position": "संचालन प्रमुख",
+        "bio": "सोने के मूल्यांकन और जोखिम प्रबंधन में विशेषज्ञता।"
+      },
+      "technology": {
+        "name": "अमित कुमार",
+        "position": "सीटीओ",
+        "bio": "सोने के ऋण सेवाओं में डिजिटल परिवर्तन को आगे बढ़ाना।"
+      }
+    }
+  }
+},
   "team": {
     "title": "हमारी टीम से मिलें",
     "member1": {
