--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -96,30 +96,113 @@
       }
     }
   },
-  "about": {
-    "title": "ଆମ ବିଷୟରେ",
-    "journey": {
-      "title": "ଆମର ଯାତ୍ରା",
-      "description": "2020 ରେ ପ୍ରତିଷ୍ଠିତ, ୟୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ ବିଶ୍ୱାସ ଏବଂ ନିର୍ଭରଯୋଗ୍ୟତା ସହିତ ଗ୍ରାହକମାନଙ୍କୁ ସେବା ପ୍ରଦାନ କରୁଛି",
-      "milestones": {
-        "2020": "ସୁନା ଋଣକୁ ବିପ୍ଳବୀକରଣ କରିବାର ଦୃଷ୍ଟି ସହିତ ପ୍ରତିଷ୍ଠିତ",
-        "2021": "50+ ଶାଖାକୁ ବିସ୍ତାର",
-        "2022": "ଡିଜିଟାଲ ସୁନା ଋଣ ପ୍ଲାଟଫର୍ମ ଲଞ୍ଚ",
-        "2023": "₹1000 କୋଟି ଋଣ ପୋର୍ଟଫୋଲିଓ ହାସଲ"
+ "about": {
+  "title": "୨୦୨୩ ରୁ ବିଶ୍ୱସନୀୟ ସୁନା ଋଣ ସାହାଯ୍ୟକାରୀ",
+  "overview": "୨୦୨୩ ରେ ସ୍ଥାପିତ, ଆମେ ୨୦ଟି ଶାଖା ଏବଂ ₹୨୩୦+ କୋଟି ଆସେଟ୍ ଅଣ୍ଡର ମ୍ୟାନେଜମେଣ୍ଟ (AUM) ସହିତ ଓଡିଶାର ଦ୍ରୁତତମ ବୃଦ୍ଧି ପାଉଥିବା ସୁନା ଋଣ ପ୍ରଦାତା ହୋଇଛୁ | ଆମର ଗ୍ରାହକ-ପ୍ରଥମ ଦୃଷ୍ଟିକୋଣ ଏବଂ ସ୍ୱଚ୍ଛ ପ୍ରକ୍ରିୟା ୧୫,୦୦୦ରୁ ଅଧିକ ପରିବାରକୁ ସେମାନଙ୍କର ସୁନା ସମ୍ପତ୍ତିର ମୂଲ୍ୟ ଅନଲକ୍ କରିବାରେ ସାହାଯ୍ୟ କରିଛି |",
+
+  "growth": {
+    "title": "ଆମର ଉଲ୍ଲେଖନୀୟ ବୃଦ୍ଧି",
+    "founding": {
+      "title": "ସାଧାରଣ ଆରମ୍ଭ",
+      "description": "ଅପ୍ରେଲ ୨୦୨୩ ରେ ଭୁବନେଶ୍ୱରରେ ଗୋଟିଏ ଶାଖା ସହିତ ଆରମ୍ଭ, ନ୍ୟାୟୀ ସୁନା ମୂଲ୍ୟାୟନ ଏବଂ ଦ୍ରୁତ ବିତରଣ ଉପରେ ଧ୍ୟାନ ଦେଇ |"
+    },
+    "expansion": {
+      "title": "ଓଡିଶା ପ୍ରସାର",
+      "description": "କେବଳ ୧୮ ମାସରେ, ଆମେ ୨୦ଟି ରଣନୀତିକ ସ୍ଥାନରେ ଏକ ଦୃଢ଼ ଉପସ୍ଥିତି ସ୍ଥାପନ କରିଛୁ:",
+      "branches": {
+        "1": "ଭୁବନେଶ୍ୱର (ଫ୍ଲାଗସିପ୍ ଶାଖା)",
+        "2": "କଟକ ସିଟି ସେଣ୍ଟର",
+        "3": "ପୁରୀ ତୀର୍ଥ କେନ୍ଦ୍ର",
+        "4": "ସମ୍ବଲପୁର ବାଣିଜ୍ୟିକ ହବ୍",
+        "5": "ରାଉରକେଲା ଔଦ୍ୟୋଗିକ ଶାଖା"
       }
     },
-    "leadership": {
-      "title": "ନେତୃତ୍ୱ",
-      "description": "ଆମର ଅନୁଭବୀ ନେତୃତ୍ୱ ଟିମ୍ ଆର୍ଥିକ ସେବାରେ ଦଶନ୍ଧି ଧରି ବିଶେଷଜ୍ଞତା ଆଣିଛନ୍ତି"
-    },
-    "values": {
-      "title": "ଆମର ମୂଲ୍ୟବୋଧ",
-      "integrity": "ସମସ୍ତ କାରବାରରେ ସତ୍ୟନିଷ୍ଠା",
-      "transparency": "ସମ୍ପୂର୍ଣ୍ଣ ସ୍ୱଚ୍ଛତା",
-      "customer": "ଗ୍ରାହକ-ପ୍ରଥମ ଦୃଷ୍ଟିକୋଣ",
-      "innovation": "ନିରନ୍ତର ନବୀକରଣ"
+    "aum": {
+      "title": "ଆର୍ଥିକ ମାଇଲଖୁଣ୍ଟ",
+      "description": "୦.୭୯% ପ୍ରତି ମାସରୁ ଆରମ୍ଭ ହେଉଥିବା ପ୍ରତିଯୋଗିତାମୂଳକ ସୁଧ ହାର ଏବଂ ବିଶ୍ୱାସ-ନିର୍ମାଣ ଉପାୟ ମାଧ୍ୟମରେ ₹୨୩୦ କୋଟି AUM ହାସଲ କରିଛି |",
+      "subtext": "୯୮% ନବୀକରଣ ହାର ସହିତ ମାସିକ ୫୦୦+ ଗ୍ରାହକଙ୍କୁ ସେବା ପ୍ରଦାନ କରୁଛି"
     }
   },
+  "title": "ଆମର ସୁନା ଋଣ ସେବା ବିଷୟରେ",
+  "overview": "2010 ରୁ ଏକ ବିଶ୍ୱସନୀୟ ସୁନା ଋଣ ପ୍ରଦାତା ଭାବରେ, ଆମେ ସମ୍ପୂର୍ଣ୍ଣ ସ୍ୱଚ୍ଛତା ସହିତ ସବୁଠାରୁ ପ୍ରତିଯୋଗିତାମୂଳକ ସୁଧ ହାର ପ୍ରଦାନ କରୁ। ଆମର ଲକ୍ଷ୍ୟ ହେଉଛି ଆପଣଙ୍କ ମୂଲ୍ୟବାନ ସୁନାକୁ ସୁରକ୍ଷିତ ରଖିବା ସହିତ ଆର୍ଥିକ ସ୍ୱାଧୀନତା ପ୍ରଦାନ କରିବା।",
+  
+  "journey": {
+    "title": "ଆମର ସୁନା ଯାତ୍ରା",
+    "description": "ଏକ ଶାଖାରୁ ଆରମ୍ଭ କରି ଅଞ୍ଚଳର ସବୁଠାରୁ ବିଶ୍ୱସନୀୟ ସୁନା ଋଣ ପ୍ରଦାତାମାନଙ୍କ ମଧ୍ୟରେ ଗୋଟିଏ ହେବା ପର୍ଯ୍ୟନ୍ତ, ଆମର ବୃଦ୍ଧି ଗ୍ରାହକ ସନ୍ତୁଷ୍ଟି ପ୍ରତି ଆମର ପ୍ରତିବଦ୍ଧତାକୁ ପ୍ରତିଫଳିତ କରେ।",
+    "milestones": {
+      "2010": "ସୁନା ଋଣରେ ବିପ୍ଳବ ଆଣିବାର ଦୃଷ୍ଟି ସହିତ ସ୍ଥାପିତ",
+      "2014": "ସୁନା ଋଣ ବିତରଣରେ ₹100 କୋଟି ଅତିକ୍ରମ କରିଛି",
+      "2018": "ମୋବାଇଲ ସୁନା ଋଣ ସେବା ଆରମ୍ଭ କରିଛି",
+      "2023": "50,000ରୁ ଅଧିକ ସନ୍ତୁଷ୍ଟ ଗ୍ରାହକଙ୍କୁ ସେବା ପ୍ରଦାନ କରିଛି"
+    }
+  },
+  
+  "whyUs": {
+    "title": "ଆମର ସୁନା ଋଣ କାହିଁକି ବାଛିବେ?",
+    "points": {
+      "rate": {
+        "title": "ସର୍ବନିମ୍ନ ସୁଧ ହାର",
+        "description": "କେବଳ 0.75% ପ୍ରତି ମାସରୁ ଆରମ୍ଭ ହେଉଥିବା ହାରର ଆନନ୍ଦ ନିଅନ୍ତୁ, କୌଣସି ଲୁକ୍କାୟିତ ଖର୍ଚ୍ଚ ବିନା।"
+      },
+      "process": {
+        "title": "ଦ୍ରୁତ ପ୍ରକ୍ରିୟାକରଣ",
+        "description": "ସର୍ବନିମ୍ନ ଡକ୍ୟୁମେଣ୍ଟେସନ୍ ସହିତ 30 ମିନିଟ୍ ମଧ୍ୟରେ ଋଣ ଅନୁମୋଦିତ କରାଯାଇଥାଏ।"
+      },
+      "security": {
+        "title": "100% ସୁରକ୍ଷିତ",
+        "description": "ଆପଣଙ୍କ ସୁନା ଆରବିଆଇ-ଅନୁମୋଦିତ ଭଲ୍ଟରେ ବିମା କଭରେଜ୍ ସହିତ ସଂରକ୍ଷିତ ହୋଇଥାଏ।"
+      }
+    }
+  },
+  
+  "values": {
+    "title": "ଆମର ସୁନାରୀ ମୂଲ୍ୟବୋଧ",
+    "list": {
+      "integrity": {
+        "icon": "integrity",
+        "title": "ସଚ୍ଚୋଟତା",
+        "description": "ପ୍ରତ୍ୟେକ କାରବାର ଇମାନଦାରୀ ଏବଂ ନୈତିକ ପ୍ରଥା ସହିତ କରାଯାଇଥାଏ।"
+      },
+      "transparency": {
+        "icon": "transparency",
+        "title": "ସ୍ୱଚ୍ଛତା",
+        "description": "କୌଣସି ଲୁକ୍କାୟିତ ଖର୍ଚ୍ଚ କିମ୍ବା ସୂକ୍ଷ୍ମ ପ୍ରିଣ୍ଟ ନାହିଁ - ଆମେ ସ୍ପଷ୍ଟ ଯୋଗାଯୋଗରେ ବିଶ୍ୱାସ କରୁ।"
+      },
+      "customer": {
+        "icon": "customer",
+        "title": "ଗ୍ରାହକ ପ୍ରଥମ",
+        "description": "ନମନୀୟ ଫେରସ୍ତ ବିକଳ୍ପ ସହିତ ଆପଣଙ୍କ ଆବଶ୍ୟକତା ଆମର ପ୍ରାଥମିକତା।"
+      },
+      "innovation": {
+        "icon": "innovation",
+        "title": "ନବୀନୀକରଣ",
+        "description": "ଟେକ୍ନୋଲୋଜି ମାଧ୍ୟମରେ ଆମର ସେବାରେ ନିରନ୍ତର ଉନ୍ନତି।"
+      }
+    }
+  },
+  
+  "leadership": {
+    "title": "ଆମର ସୁନାରୀ ଦଳ",
+    "description": "ବ୍ୟାଙ୍କିଂ ଏବଂ ଫାଇନାନ୍ସରେ 50 ବର୍ଷରୁ ଅଧିକ ସମ୍ମିଳିତ ଅନୁଭବ ସହିତ, ଆମର ନେତୃତ୍ୱ ଦଳ ଆପଣଙ୍କୁ ଉନ୍ନତ ସେବା ପ୍ରଦାନ କରିବା ପାଇଁ ବିଶେଷଜ୍ଞତା ଏବଂ ଦୃଷ୍ଟି ଆଣିଥାଏ।",
+    "team": {
+      "ceo": {
+        "name": "ରାଜେଶ ଶର୍ମା",
+        "position": "ପ୍ରତିଷ୍ଠାତା ଏବଂ ସିଇଓ",
+        "bio": "ଆର୍ଥିକ ସେବାରେ 25+ ବର୍ଷର ଅନୁଭବ ସହିତ ପୂର୍ବତନ ବ୍ୟାଙ୍କର।"
+      },
+      "operations": {
+        "name": "ପ୍ରିୟା ପଟେଲ",
+        "position": "ଅପରେସନ୍ ମୁଖ୍ୟ",
+        "bio": "ସୁନା ମୂଲ୍ୟାୟନ ଏବଂ ରିସ୍କ ପରିଚାଳନାରେ ବିଶେଷଜ୍ଞତା।"
+      },
+      "technology": {
+        "name": "ଅମିତ କୁମାର",
+        "position": "ସିଟିଓ",
+        "bio": "ସୁନା ଋଣ ସେବାରେ ଡିଜିଟାଲ ରୂପାନ୍ତରକୁ ଅଗ୍ରସର କରିବା।"
+      }
+    }
+  }
+},
   "team": {
     "title": "ଆମ ଟିମ୍ ସହ ଦେଖା କରନ୍ତୁ",
     "member1": {
