loan section new design updated

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -746,6 +746,7 @@
         "notRobot": "I'm not a robot",
         "submit": "Submit Message",
         "callSupport": "24/7 Customer Support",
+        "callmob":"123456987",
         "workingHours": "Working Hours",
         "languageSupport": "Language Support Available",
         "chatOnWhatsApp": "Chat with us on WhatsApp",
