--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -879,5 +879,46 @@
     "loans": "सोने के ऋण वितरित"
   }
 
+  ,
+
+  "calculator": {
+    "title": "यूनिगोल्ड फाइनेंस गोल्ड लोन कैलकुलेटर",
+    "weightLabel": "सोने का वजन (ग्राम में)",
+    "weightPlaceholder": "सोने का वजन दर्ज करें",
+    "purityLabel": "सोने की शुद्धता",
+    "schemeLabel": "लोन योजना चुनें",
+    "calculateBtn": "लोन राशि की गणना करें"
+  },
+  "purityOptions": {
+    "22K": "22 कैरट (91.6% शुद्ध)",
+    "20K": "20 कैरट (83.3% शुद्ध)",
+    "18K": "18 कैरट (75.0% शुद्ध)"
+  },
+  "result": {
+    "title": "लोन अनुमान परिणाम",
+    "weightText": "सोने का वजन",
+    "purityText": "सोने की शुद्धता",
+    "schemeText": "चयनित योजना",
+    "rateText": "प्रति ग्राम दर",
+    "loanAmount": "अधिकतम लोन राशि"
+  },
+  "disclaimer": {
+    "note": "अंतिम लोन राशि हमारी शाखा में सोने की शुद्धता और वजन के सत्यापन के अधीन है।",
+    "fees": "कंपनी नीति के अनुसार ब्याज दरें और प्रसंस्करण शुल्क लागू हो सकते हैं।"
+  },
+  "emptyState": {
+    "title": "अभी कोई गणना नहीं",
+    "description": "परिणाम देखने के लिए अपना विवरण दर्ज करें और गणना करें पर क्लिक करें"
+  },
+  "common": {
+    "note": "नोट",
+    "pure": "शुद्ध",
+    "grams": "ग्राम",
+    "rupeeSymbol": "₹"
+  },
+  "validation": {
+    "enterValidWeight": "कृपया सही सोने का वजन दर्ज करें"
+  
+}
   
 }
