--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -876,5 +876,47 @@
     "customers": "ସନ୍ତୁଷ୍ଟ ଗ୍ରାହକ",
     "loans": "ସୁନା ଋଣ ବିତରଣ"
   }
-                 
+   
+  
+
+  ,
+  "calculator": {
+    "title": "ୟୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ ଗୋଲ୍ଡ ଲୋନ୍ କ୍ୟାଲକୁଲେଟର୍",
+    "weightLabel": "ସୁନାର ଓଜନ (ଗ୍ରାମରେ)",
+    "weightPlaceholder": "ସୁନାର ଓଜନ ପ୍ରବେଶ କରନ୍ତୁ",
+    "purityLabel": "ସୁନାର ଶୁଦ୍ଧତା",
+    "schemeLabel": "ଲୋନ୍ ସ୍କିମ୍ ଚୟନ କରନ୍ତୁ",
+    "calculateBtn": "ଲୋନ୍ ପରିମାଣ ଗଣନା କରନ୍ତୁ"
+  },
+  "purityOptions": {
+    "22K": "22 କ୍ୟାରେଟ୍ (91.6% ଶୁଦ୍ଧ)",
+    "20K": "20 କ୍ୟାରେଟ୍ (83.3% ଶୁଦ୍ଧ)",
+    "18K": "18 କ୍ୟାରେଟ୍ (75.0% ଶୁଦ୍ଧ)"
+  },
+  "result": {
+    "title": "ଲୋନ୍ ଆକଳନ ଫଳାଫଳ",
+    "weightText": "ସୁନାର ଓଜନ",
+    "purityText": "ସୁନାର ଶୁଦ୍ଧତା",
+    "schemeText": "ଚୟନିତ ସ୍କିମ୍",
+    "rateText": "ପ୍ରତି ଗ୍ରାମ ହାର",
+    "loanAmount": "ସର୍ବାଧିକ ଲୋନ୍ ପରିମାଣ"
+  },
+  "disclaimer": {
+    "note": "ଚୂଡାନ୍ତ ଲୋନ୍ ପରିମାଣ ଆମ ଶାଖାରେ ସୁନାର ଶୁଦ୍ଧତା ଏବଂ ଓଜନ ଯାଞ୍ଚ ଉପରେ ନିର୍ଭର କରେ।",
+    "fees": "କମ୍ପାନୀ ନୀତି ଅନୁଯାୟୀ ସୁଧ ହାର ଏବଂ ପ୍ରକ୍ରିୟାକରଣ ଫି ପ୍ରଯୁଜ୍ୟ ହୋଇପାରେ।"
+  },
+  "emptyState": {
+    "title": "ଏଯାଏଁ କୌଣସି ଗଣନା ନାହିଁ",
+    "description": "ଫଳାଫଳ ଦେଖିବା ପାଇଁ ଆପଣଙ୍କର ବିବରଣୀ ପ୍ରବେଶ କରନ୍ତୁ ଏବଂ ଗଣନା କରନ୍ତୁ କ୍ଲିକ୍ କରନ୍ତୁ"
+  },
+  "common": {
+    "note": "ଟିପ୍ପଣୀ",
+    "pure": "ଶୁଦ୍ଧ",
+    "grams": "ଗ୍ରାମ",
+    "rupeeSymbol": "₹"
+  },
+  "validation": {
+    "enterValidWeight": "ଦୟାକରି ବୈଧ ସୁନାର ଓଜନ ପ୍ରବେଶ କରନ୍ତୁ"
+  
+}
 }
