loan application form and other section of /services/loans ,services/process section updated

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -375,6 +375,9 @@
                 "24K": "24K Gold"
               }
             },
+             "footer": {
+    "secured": "Your information is securely encrypted and protected "
+  },
             "submit": "Submit Application",
             "processing": "Processing..."
           },
