--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -367,6 +367,9 @@
                 "24K": "24K सोना"
               }
             },
+            "footer": {
+    "secured": "आपकी जानकारी सुरक्षित रूप से एन्क्रिप्टेड और सुरक्षित है"
+  },
             "submit": "आवेदन जमा करें",
             "processing": "प्रसंस्करण..."
           },
