--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -367,8 +367,12 @@
                   "24K": "24K ସୁନା"
                 }
               },
+               "footer": {
+    "secured": "ଆପଣଙ୍କର ସୂଚନା ସୁରକ୍ଷିତ ଭାବେ ଏନକ୍ରିପ୍ଟ ହୋଇଛି ଏବଂ ସୁରକ୍ଷିତ ଭଲ୍ଟରେ ସଂରକ୍ଷିତ ଅଛି"
+  },
               "submit": "ଆବେଦନ ଦାଖଲ କରନ୍ତୁ",
               "processing": "ପ୍ରକ୍ରିୟାକରଣ..."
+            
             },
               "loanServices": {
                 "title": "ସୁନା ଋଣ ସେବା",
