home page (DONE) Gold Loan Services (Done) Gold Loan Application Process 		header 		Eligibility Criteria 		Required Documents 		Application Steps (done) Why Choose Our Gold Loans / benifits of Gold loan (DONE) Our Value-Added Services (DONE)

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -599,6 +599,12 @@
         "3": "Transparent pricing with no hidden fees",
         "4": "Renewal facility available"
       },
+     "Fheading":{
+      "1": "Quick Processing",
+      "2": "Best Rates",
+      "3": "Safe Storage",
+      "4": "Flexible Repayment"
+     },
       "testimonialsTitle": "What Our Customers Say",
       "testimonials": {
         "1": {
